--- a/content/blog/checkpoint-chronicle-june-2024.adoc
+++ b/content/blog/checkpoint-chronicle-june-2024.adoc
@@ -20,34 +20,34 @@ Your hosts and esteemed curators of said content are  link:https://twitter.com/g
 Feel free to send our way any choice nuggets that you think we should feature in future editions.
 
 <!--more-->
-_I’m going to do something a bit different and open with some coverage of the broader data ecosystem, because it’s been a busy few weeks!_
+_I'm going to do something a bit different and open with some coverage of the broader data ecosystem, because it's been a busy few weeks!_
 
 
 == Data Ecosystem
 
 === Catalogs
 * Databricks and Snowflake each announced the intention to open-source their catalog implementations ( link:https://www.databricks.com/blog/open-sourcing-unity-catalog[Unity]  and  link:https://www.snowflake.com/blog/introducing-polaris-catalog/[Polaris] , respectively).
-* Polaris is not yet available open-source, but there’s a nice write up from Sem Sinchenko of  link:https://semyonsinchenko.github.io/ssinchenko/post/uniticatalog-first-look/[their initial experiences with Unity] .
+* Polaris is not yet available open-source, but there's a nice write up from Sem Sinchenko of  link:https://semyonsinchenko.github.io/ssinchenko/post/uniticatalog-first-look/[their initial experiences with Unity] .
 * Chris Riccomini has  link:https://materializedview.io/p/begun-the-catalog-wars-have[a good explainer of the importance of catalogs]  in data architectures.
 
 
 === Table Formats
-* As well as announcing the open-sourcing of Unity, Databricks  link:https://www.databricks.com/company/newsroom/press-releases/databricks-agrees-acquire-tabular-company-founded-original-creators[announced the acquisition of Tabular] . This is the company founded by Ryan Blue, the original creator of Apache Iceberg. What this means for Iceberg is going to be fascinating to see. Will Databricks use the Iceberg expertise that they’ve now got to advance the format in parallel with their own Delta Lake, or perhaps just evolve intra-compatibility?
-* If you’re not familiar with Iceberg, there’s  link:https://seattledataguy.substack.com/p/apache-iceberg-what-is-it[a nice primer]  from Seattle Data Guy, and you can see it in action in this blog that I wrote about  link:https://www.decodable.co/blog/kafka-to-iceberg-with-decodable[writing Kafka data to Iceberg] .
-* There’s an interesting analysis from Confluent—who are backing Iceberg with their TableFlow product—looking at whether  link:https://medium.com/confluent/will-apache-iceberg-win-the-table-format-war-01f6ff0d556d?source=rss----09dcc6e07db7---4[Apache Iceberg will win over Delta Lake]  (tl;dr: yes). That said, plenty of vendors are hedging their bets, with BigQuery recently announcing  link:https://www.databricks.com/blog/bigquery-adds-first-party-support-delta-lake[first-party support for Delta Lake] .
-* Lastly, there were cries of “don’t forget us!” from the Apache Hudi crowd, telling us that Hudi is  link:https://www.onehouse.ai/blog/apache-hudi-the-open-data-lakehouse-platform-we-need[the Open Data Lakehouse Platform We Need] .
+* As well as announcing the open-sourcing of Unity, Databricks  link:https://www.databricks.com/company/newsroom/press-releases/databricks-agrees-acquire-tabular-company-founded-original-creators[announced the acquisition of Tabular] . This is the company founded by Ryan Blue, the original creator of Apache Iceberg. What this means for Iceberg is going to be fascinating to see. Will Databricks use the Iceberg expertise that they've now got to advance the format in parallel with their own Delta Lake, or perhaps just evolve intra-compatibility?
+* If you're not familiar with Iceberg, there's  link:https://seattledataguy.substack.com/p/apache-iceberg-what-is-it[a nice primer]  from Seattle Data Guy, and you can see it in action in this blog that I wrote about  link:https://www.decodable.co/blog/kafka-to-iceberg-with-decodable[writing Kafka data to Iceberg] .
+* There's an interesting analysis from Confluent—who are backing Iceberg with their TableFlow product—looking at whether  link:https://medium.com/confluent/will-apache-iceberg-win-the-table-format-war-01f6ff0d556d?source=rss----09dcc6e07db7---4[Apache Iceberg will win over Delta Lake]  (tl;dr: yes). That said, plenty of vendors are hedging their bets, with BigQuery recently announcing  link:https://www.databricks.com/blog/bigquery-adds-first-party-support-delta-lake[first-party support for Delta Lake] .
+* Lastly, there were cries of “don't forget us!” from the Apache Hudi crowd, telling us that Hudi is  link:https://www.onehouse.ai/blog/apache-hudi-the-open-data-lakehouse-platform-we-need[the Open Data Lakehouse Platform We Need] .
 
 
 === And finally…
 * link:https://redpanda.com/press/redpanda-acquires-benthos[Redpanda acquired Benthos]  and swiftly rebranded it as RedPanda Connect with some licensing changes, prompting competitor WarpStream to  link:https://www.warpstream.com/blog/announcing-bento-the-open-source-fork-of-the-project-formerly-known-as-benthos[fork it] .
-* In all of this,  link:https://data.techcommunitycontent.com/shades-of-open-source-understanding-the-many-meanings-of-open-79b944363c07[Alex Merced’s article about open source]  is particularly timely. He explains well what open source means, how it's governed, and its relationship with commercial entities—relevant to the catalog announcements, table formats, and Benthos acquisition.
+* In all of this,  link:https://data.techcommunitycontent.com/shades-of-open-source-understanding-the-many-meanings-of-open-79b944363c07[Alex Merced's article about open source]  is particularly timely. He explains well what open source means, how it's governed, and its relationship with commercial entities—relevant to the catalog announcements, table formats, and Benthos acquisition.
 
 
 == Stream Processing, Streaming SQL, and Streaming Databases
 * A solid post from Maciej Maciejko looking at several aspects of  link:https://getindata.com/blog/optimizing-flink-sql-joins-state-management-efficient-checkpointing/[optimizing Flink SQL] .
 * Jaehyeon Kim writes some excellent hands-on articles and  link:https://jaehyeon.me/blog/2024-05-30-beam-deploy-1/[this one about PyFlink]  is well worth a read—and complements Gunnar's link:https://www.decodable.co/blog/getting-started-with-pyflink-on-kubernetes[article about PyFlink]  from last year well.
 * I do enjoy a good methodical troubleshooting story, and this one from Matvey Mitnitsky about  link:https://medium.com/@matvey.mtn/fixing-kafka-streams-uneven-tasks-distribution-at-logz-io-50e7ac071b5b[fixing Kafka Streams uneven tasks distribution]  is a good read.
-* This  link:https://medium.com/@adam.bellemare/preventing-and-fixing-bad-data-in-event-streams-part-1-27bf2a99b48e[article from Adam Bellemere]  does a really good job of outlining the kind of problem scenarios that can occur with bad data, and the differences in handling it with batch vs stream processing (plus it has some excellent memes 😉). If you’re interested in this area then take a look at the concept of Write-Audit-Publish too; I  link:https://lakefs.io/blog/data-engineering-patterns-write-audit-publish/[wrote about this last year] .
+* This  link:https://medium.com/@adam.bellemare/preventing-and-fixing-bad-data-in-event-streams-part-1-27bf2a99b48e[article from Adam Bellemere]  does a really good job of outlining the kind of problem scenarios that can occur with bad data, and the differences in handling it with batch vs stream processing (plus it has some excellent memes 😉). If you're interested in this area then take a look at the concept of Write-Audit-Publish too; I  link:https://lakefs.io/blog/data-engineering-patterns-write-audit-publish/[wrote about this last year] .
 
 
 == Event Streaming
@@ -57,10 +57,10 @@ _I’m going to do something a bit different and open with some coverage of the 
 
 
 == Data Platforms and Architecture
-* As an active user of Reddit, and a mod over on the  link:https://old.reddit.com/r/apachekafka/[r/apachekafka subreddit] , I’m always particularly interested to learn more about the platform itself. This blog from Stephan Weinwurm and colleagues in the engineering team at Reddit explains  link:https://www.reddit.com/r/RedditEng/comments/1dnklb6/enriching_data_for_reddit_safetys_rules_engine_in/[how they implemented and rolled out a new Python-based microservice based around Kafka]  for scoring new content as its posted to check for any breach of Reddit’s content rules.
+* As an active user of Reddit, and a mod over on the  link:https://old.reddit.com/r/apachekafka/[r/apachekafka subreddit] , I'm always particularly interested to learn more about the platform itself. This blog from Stephan Weinwurm and colleagues in the engineering team at Reddit explains  link:https://www.reddit.com/r/RedditEng/comments/1dnklb6/enriching_data_for_reddit_safetys_rules_engine_in/[how they implemented and rolled out a new Python-based microservice based around Kafka]  for scoring new content as its posted to check for any breach of Reddit's content rules.
 * I wince every time I see someone give the hackneyed and generic “fraud detection” as a reason for needing real-time data—so these examples from  link:https://eng.lyft.com/eta-estimated-time-of-arrival-reliability-at-lyft-d4ca2720bda8?source=rss----25cd379abb8---4[Lyft]  and  link:https://www.uber.com/en-GB/blog/personalized-marketing-at-scale/[Uber]  of how they use data are a really refreshing read.
 * I was fascinated by  link:https://engineering.atspotify.com/2024/04/data-platform-explained/[this teaser]  from Spotify about more details of their data platform, and delighted when they published  link:https://engineering.atspotify.com/2024/05/data-platform-explained-part-ii/[this followup]  going into details of some of the design as well as technologies used, including Apache Flink and BigQuery.
-* Uber are not mucking about when it comes to data volumes in their batch systems—over an exabyte is held across their estate of Hadoop (HDFS) servers.  link:https://www.uber.com/en-GB/blog/modernizing-ubers-data-infrastructure-with-gcp/[This blog]  details their migration from purely on-premises infrastructure to a hybrid deployment with GCP. Whilst adopting Google’s object store (GCS) they are for now continuing to run their own software, with a move to native PaaS on GCP planned in for the future.
+* Uber are not mucking about when it comes to data volumes in their batch systems—over an exabyte is held across their estate of Hadoop (HDFS) servers.  link:https://www.uber.com/en-GB/blog/modernizing-ubers-data-infrastructure-with-gcp/[This blog]  details their migration from purely on-premises infrastructure to a hybrid deployment with GCP. Whilst adopting Google's object store (GCS) they are for now continuing to run their own software, with a move to native PaaS on GCP planned in for the future.
 
 
 == RDBMS and Change Data Capture
@@ -69,7 +69,7 @@ _I’m going to do something a bit different and open with some coverage of the 
 
 
 == PapersRant of the Month
-_A departure from this regular section’s content—this month I came across this article which so perfectly blended common-sense, good analysis, and a sweary rant, so I just had to include it_😀
+_A departure from this regular section's content—this month I came across this article which so perfectly blended common-sense, good analysis, and a sweary rant, so I just had to include it_😀
 
 * link:https://ludic.mataroa.blog/blog/i-will-fucking-piledrive-you-if-you-mention-ai-again/[I Will F**king Piledrive You If You Mention AI Again]
 
@@ -89,12 +89,12 @@ A few new releases this month:
 * link:https://debezium.io/blog/2024/06/06/debezium-2-7-beta1-released/[Debezium 2.7.0.Beta1]
 * link:https://flink.apache.org/2024/06/18/apache-flink-cdc-3.1.1-release-announcement/[Apache Flink CDC 3.1.1]
 * link:https://flink.apache.org/2024/06/14/apache-flink-1.19.1-release-announcement/[Apache Flink 1.19.1]
-* link:https://duckdb.org/2024/06/03/announcing-duckdb-100[DuckDB 1.0.0]  _(bonus: check out_ link:https://www.infoq.com/presentations/duckdb/[this talk from InfoQ] _from one of DuckDB’s creators, Hannes Mühleisen)_
+* link:https://duckdb.org/2024/06/03/announcing-duckdb-100[DuckDB 1.0.0]  _(bonus: check out_ link:https://www.infoq.com/presentations/duckdb/[this talk from InfoQ] _from one of DuckDB's creators, Hannes Mühleisen)_
 
 
 
-That’s all for this month!
-We hope you’ve enjoyed the newsletter and would love to hear about any feedback or suggestions you’ve got.
+That's all for this month!
+We hope you've enjoyed the newsletter and would love to hear about any feedback or suggestions you've got.
 
 
 
