--- a/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
+++ b/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
@@ -15,16 +15,16 @@ endif::[]
 
 _This post originally appeared on the link:https://www.decodable.co/blog/introducing-support-for-the-apache-flink-web-ui[Decodable blog]._
 
-It’s my great pleasure to announce that you can now access the Apache Flink web user interface through Decodable’s Custom Pipeline feature!
-In this blog post, I’ll show you how to use the Apache Flink web UI to monitor your custom pipelines and also go through some recent improvements to the Decodable SDK for Custom Pipelines.
+It's my great pleasure to announce that you can now access the Apache Flink web user interface through Decodable's Custom Pipeline feature!
+In this blog post, I'll show you how to use the Apache Flink web UI to monitor your custom pipelines and also go through some recent improvements to the Decodable SDK for Custom Pipelines.
 
 <!--more-->
 
 == The Apache Flink UI
 Introduced earlier this year,  link:https://docs.decodable.co/docs/create-pipelines-using-your-own-apache-flink-jobs[Decodable Custom Pipelines]  (currently in Tech Preview) complement SQL-based pipelines by bringing you the full flexibility of the Flink APIs for implementing your stream processing use cases.
-This comes in handy for situations where SQL isn’t expressive enough, where you’d like to use a connector which isn’t available out-of-the-box in Decodable currently, or where you’d just like to migrate some existing Flink jobs to a managed execution environment, sparing you from operating your own Flink clusters.
+This comes in handy for situations where SQL isn't expressive enough, where you'd like to use a connector which isn't available out-of-the-box in Decodable currently, or where you'd just like to migrate some existing Flink jobs to a managed execution environment, sparing you from operating your own Flink clusters.
 
-No matter what’s the motivation for running custom Flink jobs, the web UI is an invaluable tool for interacting with your jobs, observing their status and health, examining logs and metrics, etc.
+No matter what's the motivation for running custom Flink jobs, the web UI is an invaluable tool for interacting with your jobs, observing their status and health, examining logs and metrics, etc.
 Starting now, you can use the Apache Flink web UI to interact and monitor your custom pipelines.
 +
 +
@@ -37,7 +37,7 @@ To open the Apache Flink web UI, do the following steps:
 Within the Apache Flink web UI itself, you can perform common tasks like examining the history of checkpoints, monitoring for any potential backpressure (and then for instance use that information to resize the job), analyzing watermarks and task metrics, retrieving the job logs, and much more.
 
 Adding support for the Apache Flink web UI moves Custom Pipelines to the next level, helping users feel confident about running their jobs in production.
-We can’t wait for you to give this a try and let us know about any feedback you may have!
+We can't wait for you to give this a try and let us know about any feedback you may have!
 
 
 == Stream Metadata in the Custom Pipeline SDK
@@ -60,13 +60,13 @@ In a future version of the SDK, this metadata will be extracted from the stream 
 
 
 == Next Steps
-If you haven’t done so yet, you can request access to the Custom Pipelines Tech Preview from the Decodable Web UI.
+If you haven't done so yet, you can request access to the Custom Pipelines Tech Preview from the Decodable Web UI.
 Simply choose “Request Custom Pipelines Access” from the drop-down when creating a pipeline, which will initiate the process for bootstrapping all the required resources and making it available to you shortly thereafter.
 
 In terms of the near-term roadmap for Custom Pipelines, we are planning to integrate Decodable managed secrets, allowing you to use secrets when, for example, configuring the connectors of a custom Flink job.
-We’re also working towards the exposure of custom job metrics to your Datadog instance (akin to what’s already supported for SQL pipelines), the ability to build custom jobs from source from a given git repository (rather than uploading JAR files), and much more.
+We're also working towards the exposure of custom job metrics to your Datadog instance (akin to what's already supported for SQL pipelines), the ability to build custom jobs from source from a given git repository (rather than uploading JAR files), and much more.
 
-Of course, we’d also be very happy to hear about your feature requests for running your custom Flink jobs on Decodable!
+Of course, we'd also be very happy to hear about your feature requests for running your custom Flink jobs on Decodable!
 
 
 
