--- a/content/blog/kafka-where-art-thou.asciidoc
+++ b/content/blog/kafka-where-art-thou.asciidoc
@@ -205,7 +205,7 @@ as https://twitter.com/Sood1Vikas/[Vikas Sood] mentions:
 
 ++++
 <div align="center">
-<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr" align="left">That’s why we decided to go with a managed offering to avoid disruptions in some critical processes.Some teams still had another decoupling layer (rabbit) between producers and Kafka. Was never a huge fan of that coz it simply meant more points of failure.</p>&mdash; Vikas Sood (@Sood1Vikas) <a href="https://twitter.com/Sood1Vikas/status/1464656813169659910">November 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr" align="left">That's why we decided to go with a managed offering to avoid disruptions in some critical processes.Some teams still had another decoupling layer (rabbit) between producers and Kafka. Was never a huge fan of that coz it simply meant more points of failure.</p>&mdash; Vikas Sood (@Sood1Vikas) <a href="https://twitter.com/Sood1Vikas/status/1464656813169659910">November 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 ++++
 
