--- a/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
+++ b/content/blog/streaming-vs-batch-wrong-dichotomy.asciidoc
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-Often times, "Stream vs. Batch" is discussed as if it’s one _or_ the other, but to me this does not make that much sense really.
+Often times, "Stream vs. Batch" is discussed as if it's one _or_ the other, but to me this does not make that much sense really.
 
 <!--more-->
 
@@ -65,8 +65,8 @@ Again and again I have seen how folks who were skeptical at first,
 very quickly wanted to get real-time streaming for more and more,
 if not all of their use cases,
 once they had seen it in action once.
-If you’ve experienced a data freshness of a second or two in your data warehouse,
-you don’t want to ever miss this magic again.
+If you've experienced a data freshness of a second or two in your data warehouse,
+you don't want to ever miss this magic again.
 
 All that being said,
 it's actually not even about pull _or_ push so much--the approaches complement each other.
