--- a/content/blog/checkpoint-chronicle-july-2024.adoc
+++ b/content/blog/checkpoint-chronicle-july-2024.adoc
@@ -25,23 +25,23 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * link:https://medium.com/@RashidAljohani/automate-delivering-apache-flink-applications-a70a142a0d90[Automate Delivering Apache Flink Applications.]  When it comes to deploying stream processing jobs to production, fully automated pipelines are key to ensure fast delivery, robustness, auditability, and more. Rashid Aljohani describes a GitOps approach for deploying Flink jobs onto OpenShift clusters, using ArgoCD for continuous delivery and the Flink Kubernetes operator.
 * link:https://www.responsive.dev/blog/why-kafka-streams[So You Want to Write a Stream Processor? Beware of the Duck Syndrome.]  It can be a tempting task to implement a stream processing engine from scratch. But as so often, the devil is in the details (Correctness! Scalability!! Observability!!!), and Almog Gavra of Responsive makes the case why you should trust established engines such as Kafka Streams.
 * link:https://medium.com/confluent/windowing-for-event-streams-80c38cc43b4d[Mastering Stream Processing: A Guide to Windowing in Kafka Streams and Flink SQL.]  Bill Bejeck, author of the popular Kafka Streams in Action book, compares windowing in Kafka Streams and Flink SQL, diving into the support of polymorphic table-valued functions (as standardised in SQL 2016) provided by the latter.
-* link:https://towardsdatascience.com/aggregating-real-time-sensor-data-with-python-and-redpanda-30a139d59702[Aggregating Real-time Sensor Data with Python and Redpanda.]  With its strong footprint in the data engineering space, it’s not a surprise that Python also is becoming more and more popular as a tool for stream processing. In this in-depth post, Tomáš Neubauer of Quix shows how to build a Python application for aggregating sensor data from scratch.
+* link:https://towardsdatascience.com/aggregating-real-time-sensor-data-with-python-and-redpanda-30a139d59702[Aggregating Real-time Sensor Data with Python and Redpanda.]  With its strong footprint in the data engineering space, it's not a surprise that Python also is becoming more and more popular as a tool for stream processing. In this in-depth post, Tomáš Neubauer of Quix shows how to build a Python application for aggregating sensor data from scratch.
 * link:https://yokota.blog/2024/07/11/in-memory-analytics-for-kafka-using-duckdb/[In-Memory Analytics for Kafka using DuckDB.]  Ingesting data from Kafka into DuckDB for querying it? Not a problem with  link:https://github.com/rayokota/kwack[kwack] , a tool built for this very purpose by Robert Yokota, among other things making it easy to export data from Kafka into Parquet files.
 
 
 == Event Streaming
-* link:https://www.canva.dev/blog/engineering/product-analytics-event-collection/[How Canva collects 25 billion events per day.]  I don’t hear  much about Kinesis Data Streams these days, Amazon’s fully managed data stream service. But it’s very much alive, as demonstrated by this post by Canva’s Long Nguyen. They decided to use KDS over Amazon’s managed Kafka service (MSK), because it was significantly cheaper, while being only marginally slower. Great write-up sourced from practical experience.
+* link:https://www.canva.dev/blog/engineering/product-analytics-event-collection/[How Canva collects 25 billion events per day.]  I don't hear  much about Kinesis Data Streams these days, Amazon's fully managed data stream service. But it's very much alive, as demonstrated by this post by Canva's Long Nguyen. They decided to use KDS over Amazon's managed Kafka service (MSK), because it was significantly cheaper, while being only marginally slower. Great write-up sourced from practical experience.
 * link:https://medium.com/exness-blog/streaming-data-platform-at-exness-flink-sql-and-pyflink-25e3d765c3c1[Streaming Data Platform at Exness: Flink SQL and PyFlink.]  Part of an entire series of blog posts on the Streaming Data Platform at Exness, this post by Aleksei Perminov describes how they run SQL jobs using the Flink Kubernetes operator, including support for UDFs and statement sets, as well as their approach for running PyFlink jobs.
-* link:https://www.decodable.co/blog/kafka-to-iceberg-with-flink[Sending Data to Apache Iceberg from Apache Kafka with Apache Flink.]  Apache Iceberg is all the rage these days, and it’s definitely one of Robin’s favourite technologies. No wonder that he continues his exploration of this open table format, after discussing  link:https://www.decodable.co/blog/kafka-to-iceberg-with-decodable[ingestion into Iceberg from Decodable]  a few weeks ago.
-* link:https://developers.redhat.com/articles/2023/12/01/how-avoid-rebalances-and-disconnections-kafka-consumers[How to avoid rebalances and disconnections in Kafka consumers.]  Frequent rebalancing can be disruptive to Kafka consumers; in this post, Red Hat’s Abel Luque and Hugo Melendez Imaz describe strategies for avoiding this, such as asynchronous processing and the pause/resume pattern.
+* link:https://www.decodable.co/blog/kafka-to-iceberg-with-flink[Sending Data to Apache Iceberg from Apache Kafka with Apache Flink.]  Apache Iceberg is all the rage these days, and it's definitely one of Robin's favourite technologies. No wonder that he continues his exploration of this open table format, after discussing  link:https://www.decodable.co/blog/kafka-to-iceberg-with-decodable[ingestion into Iceberg from Decodable]  a few weeks ago.
+* link:https://developers.redhat.com/articles/2023/12/01/how-avoid-rebalances-and-disconnections-kafka-consumers[How to avoid rebalances and disconnections in Kafka consumers.]  Frequent rebalancing can be disruptive to Kafka consumers; in this post, Red Hat's Abel Luque and Hugo Melendez Imaz describe strategies for avoiding this, such as asynchronous processing and the pause/resume pattern.
 
 
 == Data Ecosystem
-* link:https://developers.redhat.com/articles/2024/06/05/encryption-rest-apache-kafka[Encryption at rest for Apache Kafka.]  Kroxylicious, a wire protocol proxy for Apache Kafka, was the last project I helped get off the ground during my time at Red Hat. Besides multi-tenancy, policy enforcement, auditing, and schema validation, encryption is a key proxy use case. Red Hat’s Tom Bentley and Chris Giblin, and Sean Rooney of IBM discuss how Kroxylicious provides secure encryption and what’s next for the project. Also check out this  link:https://www.confluent.io/events/kafka-summit-bangalore-2024/hiding-your-data-from-prying-eyes/[Kroxylicious recording]  from Kafka Summit Bengaluru.
+* link:https://developers.redhat.com/articles/2024/06/05/encryption-rest-apache-kafka[Encryption at rest for Apache Kafka.]  Kroxylicious, a wire protocol proxy for Apache Kafka, was the last project I helped get off the ground during my time at Red Hat. Besides multi-tenancy, policy enforcement, auditing, and schema validation, encryption is a key proxy use case. Red Hat's Tom Bentley and Chris Giblin, and Sean Rooney of IBM discuss how Kroxylicious provides secure encryption and what's next for the project. Also check out this  link:https://www.confluent.io/events/kafka-summit-bangalore-2024/hiding-your-data-from-prying-eyes/[Kroxylicious recording]  from Kafka Summit Bengaluru.
 * link:https://medium.com/google-cloud/bigquery-table-partitioning-a-comprehensive-guide-dc66f093764c[BigQuery Table Partitioning—A Comprehensive Guide.]  Partitioning is a proven strategy for ensuring high performance when handling large data sets, allowing query engines to prune large chunks of data during query execution depending on the given WHERE clause. Matt Dixon explains how to make use of this technique with Google BigQuery.
-* link:https://themoah.medium.com/breaking-the-bank-the-most-expensive-mistakes-in-data-pipelines-825150609a5a[Breaking the bank: the most expensive mistakes in data pipelines.]  Entertaining post about dos and don’ts when building data pipelines.
+* link:https://themoah.medium.com/breaking-the-bank-the-most-expensive-mistakes-in-data-pipelines-825150609a5a[Breaking the bank: the most expensive mistakes in data pipelines.]  Entertaining post about dos and don'ts when building data pipelines.
 * link:https://github.blog/2024-06-13-unlocking-the-power-of-unstructured-data-with-rag/[Unlocking the power of unstructured data with RAG.]  Nice introduction to gaining insight from unstructured data in the context of software development, such as source code, README files, commit messages, and issue descriptions, using large language models and retrieval-augmented generation (RAG), by Nicole Choi.
-* link:https://www.thenile.dev/blog/all-about-ai[Everything a developer needs to know about Generative AI for SaaS.]  Staying in the AI department, if you are looking for an introduction to what RAG, GPT, and vector search are all about, I highly recommend taking a look at this fantastic post by Nile’s Gwen Shapira, which provides a really good introduction to these concepts.
+* link:https://www.thenile.dev/blog/all-about-ai[Everything a developer needs to know about Generative AI for SaaS.]  Staying in the AI department, if you are looking for an introduction to what RAG, GPT, and vector search are all about, I highly recommend taking a look at this fantastic post by Nile's Gwen Shapira, which provides a really good introduction to these concepts.
 
 
 == Data Platforms and Architecture
@@ -52,10 +52,10 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 
 == RDBMS and Change Data Capture
-* link:https://dzone.com/articles/logical-replication-features-in-pg-17[Logical Replication Features in PG-17.]  Postgres practitioners rejoice: Postgres 17—scheduled to be released later this year—is going to deliver failover replication slots, allowing you to point your CDC clients to a stand-by server, after it has been promoted to primary in case of a fail-over. Ahsan Hadi takes an early look at this long-awaited feature in this post. In the meantime, you can implement this functionality yourself on Postgres 16, as I’ve discussed in  link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-1-of-2[a blog post a few months back] .
+* link:https://dzone.com/articles/logical-replication-features-in-pg-17[Logical Replication Features in PG-17.]  Postgres practitioners rejoice: Postgres 17—scheduled to be released later this year—is going to deliver failover replication slots, allowing you to point your CDC clients to a stand-by server, after it has been promoted to primary in case of a fail-over. Ahsan Hadi takes an early look at this long-awaited feature in this post. In the meantime, you can implement this functionality yourself on Postgres 16, as I've discussed in  link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-1-of-2[a blog post a few months back] .
 * link:https://xata.io/blog/pgstream-postgres-replication-schema-changes[Introducing pgstream: Postgres replication with DDL changes.]  Amongst the Postgres SaaS providers, Xata is definitely worth keeping an eye on. Not only have they published  link:https://github.com/xataio/pgroll[pgroll] , an innovative solution for schema migrations in a safe and revertible way, but also  link:https://github.com/xataio/pgstream[pgstream] , a command line client for CDC with support for DDL changes.
-* link:https://blog.paradedb.com/pages/iceberg_lakehouse[Putting DuckDB in Postgres to Query Iceberg.]  What happens when you combine everyone’s most favourite OLTP database with everyone’s most favourite in-process OLAP store? Good things of course! That’s probably what the fine folks of ParadeDB must have thought and did exactly that with their  link:https://github.com/paradedb/paradedb/tree/dev/pg_lakehouse[pg_lakehouse]  Postgres extension. You can read all about it in this post by Ming Ying.
-* link:https://neon.tech/blog/fan-out-postgres-changes-using-debezium-and-upstash-redis[Fan-out from Postgres with Change Data Capture using Debezium and Upstash Redis.]  Updating your database and a cache, without resorting to unsafe dual writes? That’s a highly popular CDC use case, discussed in depth in this post by Evan Shortiss, using Neon for Postgres and Upstash for Redis.
+* link:https://blog.paradedb.com/pages/iceberg_lakehouse[Putting DuckDB in Postgres to Query Iceberg.]  What happens when you combine everyone's most favourite OLTP database with everyone's most favourite in-process OLAP store? Good things of course! That's probably what the fine folks of ParadeDB must have thought and did exactly that with their  link:https://github.com/paradedb/paradedb/tree/dev/pg_lakehouse[pg_lakehouse]  Postgres extension. You can read all about it in this post by Ming Ying.
+* link:https://neon.tech/blog/fan-out-postgres-changes-using-debezium-and-upstash-redis[Fan-out from Postgres with Change Data Capture using Debezium and Upstash Redis.]  Updating your database and a cache, without resorting to unsafe dual writes? That's a highly popular CDC use case, discussed in depth in this post by Evan Shortiss, using Neon for Postgres and Upstash for Redis.
 * Speaking of Neon, we recently collaborated with their team for adding an  link:https://neon.tech/docs/guides/logical-replication-decodable[integration guide]  on combining the serverless Postgres with Decodable for processing change event streams.
 * link:https://debezium.io/blog/2024/07/08/async-embedded-engine/[Debezium Asynchronous Engine.]  While Debezium is used as a Kafka Connector most of the time, it also can be used as a library within any Java-based application. Vojtěch Juránek from the Debezium team discusses the use cases and applications of the Debezium embedded engine and the brand-new asynchronous implementation of the same.
 
@@ -87,8 +87,8 @@ A few new releases this month:
 
 
 
-That’s all for this month!
-We hope you’ve enjoyed the newsletter and would love to hear about any feedback or suggestions you’ve got.
+That's all for this month!
+We hope you've enjoyed the newsletter and would love to hear about any feedback or suggestions you've got.
 
 
 
