--- a/content/blog/failover-replication-slots-with-postgres-17.adoc
+++ b/content/blog/failover-replication-slots-with-postgres-17.adoc
@@ -19,28 +19,28 @@ Postgres read replicas are commonly used not only to distribute query load among
 If the primary node of a Postgres cluster fails, a read replica can be promoted to be the new primary, processing write (and read) requests from thereon.
 
 <!--more-->
-Prior to Postgres version 16, read replicas (or stand-by servers) couldn’t be used at all for logical replication.
+Prior to Postgres version 16, read replicas (or stand-by servers) couldn't be used at all for logical replication.
 Logical replication is a method for replicating data from a Postgres publisher to subscribers.
 These subscribers can be other Postgres instances, as well as non-Postgres tools, such as Debezium, which use logical replication for  link:https://www.decodable.co/blog/why-do-i-need-cdc[change data capture (CDC)] .
-Logical replication slots—which keep track of how far a specific subscriber has consumed the database’s change event stream—could only be created on the primary node of a Postgres cluster.
-This meant that after a failover from primary to replica you’d have to create a new replication slot and typically also start with a new initial snapshot of the data.
+Logical replication slots—which keep track of how far a specific subscriber has consumed the database's change event stream—could only be created on the primary node of a Postgres cluster.
+This meant that after a failover from primary to replica you'd have to create a new replication slot and typically also start with a new initial snapshot of the data.
 Otherwise you might have missed change events occurring after reading from the slot on the old primary and before creating the slot on the new primary.
 
 Whilst external tools such as  link:https://github.com/EnterpriseDB/pg_failover_slots[pg_failover_slots]  were added over time, a built-in solution for failing over replication slots from one Postgres node to another was sorely missed by many users.
 This situation substantially improved with the release of Postgres 16, which brought support for setting up replication slots on read replicas.
-I’ve discussed this feature in great detail in  link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-1-of-2[this post] .
+I've discussed this feature in great detail in  link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-1-of-2[this post] .
 Back then,  link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-2-of-2[I also explored]  how to use replication slots on replicas for manually implementing replication slot failover.
 But the good news is, as of Postgres version 17, all this is not needed any longer, as it finally supports failover slots out of the box!
 
 link:https://www.postgresql.org/docs/current/logical-replication-failover.html[Failover slots]  are replication slots which are created on the primary node and which are propagated automatically to read replicas.
 Their state on the replica is kept in sync with the upstream slot on the primary, which means that after a failover, when promoting a replica to primary, you can continue to consume the slot on the new primary without the risk of missing any change events.
-This is really great news for using tools like Debezium (and by extension, data platforms such as Decodable, which provides a fully-managed  link:https://docs.decodable.co/connect/source/postgres-cdc.html[Postgres CDC connector]  based on Debezium) in HA scenarios, so let’s take a closer look at how this works.
+This is really great news for using tools like Debezium (and by extension, data platforms such as Decodable, which provides a fully-managed  link:https://docs.decodable.co/connect/source/postgres-cdc.html[Postgres CDC connector]  based on Debezium) in HA scenarios, so let's take a closer look at how this works.
 
 
 == Hello, Failover Slots!
-Let’s start by exploring failover slots solely from the perspective of using Postgres’ SQL interface to logical replication.
+Let's start by exploring failover slots solely from the perspective of using Postgres' SQL interface to logical replication.
 If you want to follow along, check out  link:https://github.com/decodableco/examples/tree/main/failover-slots[this project]  from the Decodable examples repository.
-It contains a  link:https://github.com/decodableco/examples/blob/main/failover-slots/docker-compose.yaml[Docker Compose file]  which brings up a Postgres primary and a read replica (based on  link:https://medium.com/@eremeykin/how-to-setup-single-primary-postgresql-replication-with-docker-compose-98c48f233bbf[this set-up]  by Peter Eremeykin, which makes it really easy to spin up an ephemeral Postgres cluster for testing purposes), as well as a few other components which we’ll use later on.
+It contains a  link:https://github.com/decodableco/examples/blob/main/failover-slots/docker-compose.yaml[Docker Compose file]  which brings up a Postgres primary and a read replica (based on  link:https://medium.com/@eremeykin/how-to-setup-single-primary-postgresql-replication-with-docker-compose-98c48f233bbf[this set-up]  by Peter Eremeykin, which makes it really easy to spin up an ephemeral Postgres cluster for testing purposes), as well as a few other components which we'll use later on.
 Start everything by running:
 
 
@@ -50,7 +50,7 @@ $ docker compose up
 ----
 Primary and replica are synchronized via a physical replication slot (i.e.
 unlike with logical replication, all the WAL segments are replicated), ensuring that all data changes done on the primary are replicated to the replica immediately.
-Get a session on the primary (I’m going to use  link:https://github.com/dbcli/pgcli[pgcli]  which is my favorite Postgres CLI client, but _psql_ will do the trick as well):
+Get a session on the primary (I'm going to use  link:https://github.com/dbcli/pgcli[pgcli]  which is my favorite Postgres CLI client, but _psql_ will do the trick as well):
 
 
 [source,shell]
@@ -82,9 +82,9 @@ user@primary:inventorydb> SHOW wal_level;
 | logical   |
 +-----------+
 ----
-Note that if you are running Postgres on Amazon RDS (where version 17  link:https://aws.amazon.com/about-aws/whats-new/2024/09/postgresql-170-amazon-rds-database-preview-environment/[is available]  in the preview environment right now), you’ll need to set the parameter `rds.logical_replication` to `on` for this.
+Note that if you are running Postgres on Amazon RDS (where version 17  link:https://aws.amazon.com/about-aws/whats-new/2024/09/postgresql-170-amazon-rds-database-preview-environment/[is available]  in the preview environment right now), you'll need to set the parameter `rds.logical_replication` to `on` for this.
 
-There’s a physical replication slot for synchronizing changes from the primary to the replica server:
+There's a physical replication slot for synchronizing changes from the primary to the replica server:
 
 
 [source,shell]
@@ -141,7 +141,7 @@ user@primary:inventorydb> SELECT * from pg_is_in_recovery();
 ----
 It is already configured with `hot_standby_feedback=ON` which is a requirement for failover slots to work.
 In addition, the database name must be added to `primary_conninfo` on the replica (its connection string for connecting to the primary).
-I couldn’t find a way for just adding a single attribute, so I retrieved the current value and added the database name, so that the complete string can be written back (on RDS, that setting can’t be changed, instead set the `rds.logical_slot_sync_dbname` parameter to the name of the database):
+I couldn't find a way for just adding a single attribute, so I retrieved the current value and added the database name, so that the complete string can be written back (on RDS, that setting can't be changed, instead set the `rds.logical_slot_sync_dbname` parameter to the name of the database):
 
 
 [source,shell]
@@ -151,7 +151,7 @@ user@replica:inventorydb> ALTER SYSTEM SET primary_conninfo = 'user=replicator p
 user@replica:inventorydb> SELECT pg_reload_conf();
 ----
 At this point, primary and replica are set up for failover slots to work.
-So let’s create a logical replication slot on the primary next:
+So let's create a logical replication slot on the primary next:
 
 
 [source,shell]
@@ -163,7 +163,7 @@ user@primary:inventorydb> SELECT * FROM pg_create_logical_replication_slot('test
 | test_slot | 0/304DCA0 |
 +-----------+-----------+
 ----
-As of Postgres 17, there’s a new optional parameter of the `pg_create_logical_replication_slot()` function for specifying that a failover slot should be created (`failover=true`).
+As of Postgres 17, there's a new optional parameter of the `pg_create_logical_replication_slot()` function for specifying that a failover slot should be created (`failover=true`).
 On the replica, call `pg_sync_replication_slots()` for synchronizing all failover slots from the primary:
 
 
@@ -200,7 +200,7 @@ FROM
 Right now, the `confirmed_flush_lsn` of the slot on the replica matches that of the slot on the primary, i.e.
 the two slots are in sync.
 But once a client consumes changes from the primary slot, the slot on the replica will not be updated accordingly.
-You could manually call `pg_sync_replication_slots()` repeatedly to synchronize the slot on the replica, but luckily, there’s an easier way.
+You could manually call `pg_sync_replication_slots()` repeatedly to synchronize the slot on the replica, but luckily, there's an easier way.
 By setting `sync_replication_slots` to `on` on the replica, a synchronization worker will be started, which will propagate the replication state automatically:
 
 
@@ -231,7 +231,7 @@ user@primary:inventorydb> SELECT * FROM pg_logical_slot_get_changes('test_slot',
 +-----------+-----+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 ----
 If you query `pg_replication_slots` once more, you'll see that the confirmed flush LSN of the slot on the replica matches still that of the primary.
-To conclude our basic experiments, let’s see what happens when we try to consume the replication slot on the replica server:
+To conclude our basic experiments, let's see what happens when we try to consume the replication slot on the replica server:
 
 
 [source,shell]
@@ -243,14 +243,14 @@ HINT:  Specify another replication slot.
 ----
 Somewhat to be expected, this triggers an error: as the state of failover slots on a replica is driven by the corresponding slot on the primary, they cannot be consumed.
 Only after promoting a replica to the primary, clients can connect to that slot and read change events from it.
-Let’s give this a try by setting up an instance of the Decodable Postgres CDC connector next!
+Let's give this a try by setting up an instance of the Decodable Postgres CDC connector next!
 
 
 == Failover Slots in Decodable
 Decodable is a fully managed realtime data platform based on Apache Flink.
 It offers  link:https://docs.decodable.co/connections.html[managed connectors]  for a wide range of source and sink systems, allowing you to build robust and efficient ETL pipelines with ease.
 Its Postgres CDC connector is using Debezium under the hood, which in turn uses logical replication for ingesting data change events from Postgres.
-Thanks to failover slots, it’s possible to continue streaming changes from a Postgres read replica which got promoted to primary into Decodable, without missing any events.
+Thanks to failover slots, it's possible to continue streaming changes from a Postgres read replica which got promoted to primary into Decodable, without missing any events.
 
 For this kind of use case it makes sense to put a Postgres proxy in front of the database cluster, exposing one stable endpoint for it.
 This will enable us later on to fail over from primary to replica without having to reconfigure the Decodable Postgres connector.
@@ -267,7 +267,7 @@ The overall architecture looks like this:
 
 image::/images/2024/12/674e257ecdf979a10583196d_AD_4nXeq8ARRjEniBZvCzgdxDbOdLwTGJqOIZbQI775oygnjJEkLu6UWIOTPez2VTLrMQMHwEtqqlsU3fhHyJ1NqAlS8UEnjbehvoVeQSsagXd4pAn1GiHfFTPhx4Q2ptZOZbGZL09M4.png[]
 _Fig._
-_1: Solution overview_For the following steps, you’ll need to have these things:
+_1: Solution overview_For the following steps, you'll need to have these things:
 
 * A free Decodable account
 * The Decodable CLI installed on your machine
@@ -276,7 +276,7 @@ _1: Solution overview_For the following steps, you’ll need to have these thing
 The pgbouncer proxy is configured to connect to the primary Postgres host, and ngrok exposes a publicly accessible tunnel for connecting to pgbouncer.
 
 Decodable provides support for declaring your resources—connectors, SQL pipelines, etc.—in a declarative way.
-You describe the resources you’d like to have in a YAML file, and the Decodable platform will take care of materializing them in your account.
+You describe the resources you'd like to have in a YAML file, and the Decodable platform will take care of materializing them in your account.
 The example project contains definitions for a Postgres CDC source connector, a Decodable secret with the database password to be used by the connector, and a stream, to which the connector will write its data:
 
 
@@ -350,7 +350,7 @@ spec:
        properties.compression.type: zstd
 ----
 ngrok creates a tunnel for publicly exposing the local Postgres instance using a random host name and port.
-With the help of _httpie_ and _jq_, we can retrieve the public endpoint of the tunnel from the local ngrok REST API (alternatively, there’s also a UI running on  link:http://localhost:4040/[http://localhost:4040/] ), allowing us to propagate these values to the resource definition via sed before applying the same using the Decodable CLI ( the special file name - indicates to read from stdin rather from a given file):
+With the help of _httpie_ and _jq_, we can retrieve the public endpoint of the tunnel from the local ngrok REST API (alternatively, there's also a UI running on  link:http://localhost:4040/[http://localhost:4040/] ), allowing us to propagate these values to the resource definition via sed before applying the same using the Decodable CLI ( the special file name - indicates to read from stdin rather from a given file):
 
 
 [source,shell]
@@ -410,7 +410,7 @@ inventorydb-source
   type                     source
   ...
 ----
-Upon its first activation, the connector will create an initial snapshot of the data in the customers table and then read any subsequent data changes incrementally via the replication slot we’ve created.
+Upon its first activation, the connector will create an initial snapshot of the data in the customers table and then read any subsequent data changes incrementally via the replication slot we've created.
 To take a look at the data head over to the Decodable web UI in your browser and go to the “Streams” view.
 Select the `inventorydb__inventory__customers` stream and go to the “Preview” tab where you should see the data from the snapshot.
 Do a few data changes in the Postgres session on the primary node:
@@ -426,7 +426,7 @@ Shortly thereafter, these updates will be reflected in the stream preview as wel
 
 image::/images/2024/12/674e257e52a9d8c83bbef4e5_AD_4nXf_4rMhYzKoGq1zt-Y7JzA4dfC1V55AgqjGI31oJjibaseY52fryG2h6ZI1MaEgu18pz6aTp_Xf-Wx1yU0jdqTn2Yi2C_lSvlam6q2JZj-FNQPCBR5zSdruVPOuRg-IyROg0EN_0w.png[]
 _Fig._
-_2: Postgres data change events in the Decodable stream preview_Now let’s simulate a failover from primary to replica server and see how the failover of the replication slot is handled.
+_2: Postgres data change events in the Decodable stream preview_Now let's simulate a failover from primary to replica server and see how the failover of the replication slot is handled.
 Stop the primary Postgres node:
 
 
@@ -475,7 +475,7 @@ The connector now consumes from the replication slot on that new primary server,
 ----
 user@replica:inventorydb> INSERT INTO inventory.customers VALUES (default, 'Rudy', 'Replica', 'rudy@example.com', FALSE)
 ----
-If you retrieve the state of the replication state again, using the same query as above, you’ll also see that it is marked as `active` now:
+If you retrieve the state of the replication state again, using the same query as above, you'll also see that it is marked as `active` now:
 
 
 [source,shell]
@@ -490,7 +490,7 @@ If you retrieve the state of the replication state again, using the same query a
 == Wrapping Up
 Failover slots are an essential part to using Postgres and logical replication in HA scenarios.
 Added in Postgres 17, they allow logical replication clients such as Debezium to seamlessly continue streaming change events after a database fail-over, ensuring no events are lost in the process.
-This renders previous solutions such as manually synchronizing slots on a standby server (as supported since Postgres 16) or external tools such as  link:https://github.com/EnterpriseDB/pg_failover_slots[pg_failover_slots]  obsolete (although the latter still comes in handy if you are on an older Postgres version and can’t upgrade to 17 just yet).
+This renders previous solutions such as manually synchronizing slots on a standby server (as supported since Postgres 16) or external tools such as  link:https://github.com/EnterpriseDB/pg_failover_slots[pg_failover_slots]  obsolete (although the latter still comes in handy if you are on an older Postgres version and can't upgrade to 17 just yet).
 
 To create a failover slot, the new failover parameter must be set to true when calling `pg_create_logical_replication_slot()`.
 Debezium does not do this yet at the moment, but I am planning to implement the required change in the next few weeks.
@@ -499,4 +499,4 @@ In the meantime, you can create the replication slot manually, as described abov
 To learn more about Postgres failover slots, check out the blog posts by  link:https://bdrouvot.github.io/2024/03/16/postgres-17-highlight-logical-replication-slots-synchronization/[Bertrand Drouvot]  and  link:http://amitkapila16.blogspot.com/2024/10/failover-slots-in-postgresql-17.html[Amit Kapila] .
 RDS users should refer to the  link:https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Appendix.PostgreSQL.CommonDBATasks.pglogical.slot.synchronization.html[AWS documentation]  on managing failover slots.
 
-If you’d like to give it a try yourself, including the managed Postgres CDC connector on Decodable, you can find the  link:https://github.com/decodableco/examples/tree/main/failover-slots[complete source code]  for this blog post in the Decodable examples repository on GitHub.
+If you'd like to give it a try yourself, including the managed Postgres CDC connector on Decodable, you can find the  link:https://github.com/decodableco/examples/tree/main/failover-slots[complete source code]  for this blog post in the Decodable examples repository on GitHub.
